This program is compiled in Processing from Processing.org

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,70 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+import processing.serial.*;
+Serial myPort;
 
-# Compiled Dynamic libraries
-*.so
+void setup() 
+{
+  size(500,500);
+  println("Open Serial Port to Arduino."  + '\n');
+  println(Serial.list());
+  myPort = new Serial(this, Serial.list()[0], 9600);
+  myPort.bufferUntil('\n');
+}
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+void draw() {
+  if(keyPressed) {
+    if (key == 'w') {
+      fill(0);
+      myPort.write('w');
+    }
+  } else if(key == 's')
+  {
+    fill(255);
+    myPort.write('s');
+  }
+  strokeWeight(2);
+  PFont book;
+  book = loadFont("BookAntiqua-50.vlw");
+  textFont(book, 50);
+  
+  //Top block W
+  fill(150);
+  rect(225, 175, 50, 50);
+  fill(0);
+  textAlign(CENTER);
+  text("W", 250, 220);
+  /*
+  line(225, 175, 237.5, 225);
+  line(237.5, 225, 250, 200);
+  line(250, 200, 262.5, 225);
+  line(262.5, 225, 275, 175);
+  */
+  
+  //Right block D
+  fill(150);
+  rect(275, 225, 50, 50);
+  fill(0);
+  textAlign(CENTER);
+  text("D", 300, 270);
+  
+  
+  //left block A
+  fill(150);
+  rect(175, 225, 50, 50);
+  fill(0);
+  textAlign(CENTER);
+  text("A", 199, 270);
+  /*
+  line(200, 225, 175, 275);
+  line(200, 225, 225, 275);
+  line(187.5, 250, 212.5, 250);
+  */
+  
+  //Center block S
+  fill(150);
+  rect(225, 225, 50, 50);
+  fill(0);
+  //line(250, 175, 250, 275);
+  textAlign(CENTER);
+  text("S", 250, 270);
+
+}
